reference/Github/test/MCParser.java
// Generated from MC.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MCParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, PRITYPE=3, VOIDTYPE=4, If=5, Else=6, For=7, Do=8, While=9, 
		Break=10, Continue=11, Return=12, Put=13, Ln=14, Get=15, ADD=16, MUL=17, 
		LOGICNOT=18, LOGICOR=19, NOTEQ=20, LESS=21, LESSEQ=22, AS=23, SUB=24, 
		DIV=25, MOD=26, LOGICAND=27, EQ=28, GREATER=29, GREATEREQ=30, LS=31, RS=32, 
		LP=33, RP=34, LB=35, RB=36, SEMI=37, COMMA=38, ID=39, INTLIT=40, FLOATLIT=41, 
		BOOLEANLIT=42, STRINGLIT=43, LINECOMMENT=44, BLOCKCOMMENT=45, WS=46, ERROR_CHAR=47, 
		UNCLOSE_STRING=48, ILLEGAL_ESCAPE=49;
	public static final int
		RULE_prog = 0, RULE_declar = 1, RULE_vardeclar = 2, RULE_variable = 3, 
		RULE_funcdeclar = 4, RULE_para = 5, RULE_types = 6, RULE_array_type = 7, 
		RULE_array_pointer_type = 8, RULE_input_apt = 9, RULE_output_apt = 10, 
		RULE_expr = 11, RULE_operands = 12, RULE_ele_array = 13, RULE_function_call = 14, 
		RULE_staments = 15, RULE_if_st = 16, RULE_for_st = 17, RULE_do_while = 18, 
		RULE_break_st = 19, RULE_continue_st = 20, RULE_return_st = 21, RULE_expression = 22, 
		RULE_block = 23, RULE_special_fuction = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "declar", "vardeclar", "variable", "funcdeclar", "para", "types", 
			"array_type", "array_pointer_type", "input_apt", "output_apt", "expr", 
			"operands", "ele_array", "function_call", "staments", "if_st", "for_st", 
			"do_while", "break_st", "continue_st", "return_st", "expression", "block", 
			"special_fuction"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'put'", "'get'", null, null, null, null, null, null, null, null, 
			null, null, null, "'Ln'", null, "'+'", "'*'", "'!'", "'||'", "'!='", 
			"'<'", "'<='", "'='", "'-'", "'/'", "'%'", "'&&'", "'=='", "'>'", "'>='", 
			"'['", "']'", "'{'", "'}'", "'('", "')'", "';'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "PRITYPE", "VOIDTYPE", "If", "Else", "For", "Do", "While", 
			"Break", "Continue", "Return", "Put", "Ln", "Get", "ADD", "MUL", "LOGICNOT", 
			"LOGICOR", "NOTEQ", "LESS", "LESSEQ", "AS", "SUB", "DIV", "MOD", "LOGICAND", 
			"EQ", "GREATER", "GREATEREQ", "LS", "RS", "LP", "RP", "LB", "RB", "SEMI", 
			"COMMA", "ID", "INTLIT", "FLOATLIT", "BOOLEANLIT", "STRINGLIT", "LINECOMMENT", 
			"BLOCKCOMMENT", "WS", "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MC.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public List<DeclarContext> declar() {
			return getRuleContexts(DeclarContext.class);
		}
		public DeclarContext declar(int i) {
			return getRuleContext(DeclarContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(50);
				declar();
				}
				}
				setState(53); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==PRITYPE || _la==VOIDTYPE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarContext extends ParserRuleContext {
		public VardeclarContext vardeclar() {
			return getRuleContext(VardeclarContext.class,0);
		}
		public FuncdeclarContext funcdeclar() {
			return getRuleContext(FuncdeclarContext.class,0);
		}
		public DeclarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).enterDeclar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).exitDeclar(this);
		}
	}

	public final DeclarContext declar() throws RecognitionException {
		DeclarContext _localctx = new DeclarContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declar);
		try {
			setState(57);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(55);
				vardeclar();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(56);
				funcdeclar();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardeclarContext extends ParserRuleContext {
		public TerminalNode PRITYPE() { return getToken(MCParser.PRITYPE, 0); }
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public TerminalNode SEMI() { return getToken(MCParser.SEMI, 0); }
		public List<TerminalNode> COMMA() { return getTokens(MCParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MCParser.COMMA, i);
		}
		public VardeclarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardeclar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).enterVardeclar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).exitVardeclar(this);
		}
	}

	public final VardeclarContext vardeclar() throws RecognitionException {
		VardeclarContext _localctx = new VardeclarContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_vardeclar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			match(PRITYPE);
			setState(60);
			variable();
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(61);
				match(COMMA);
				setState(62);
				variable();
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(68);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MCParser.ID, 0); }
		public TerminalNode LS() { return getToken(MCParser.LS, 0); }
		public TerminalNode INTLIT() { return getToken(MCParser.INTLIT, 0); }
		public TerminalNode RS() { return getToken(MCParser.RS, 0); }
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).exitVariable(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(ID);
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LS) {
				{
				setState(71);
				match(LS);
				setState(72);
				match(INTLIT);
				setState(73);
				match(RS);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncdeclarContext extends ParserRuleContext {
		public TypesContext types() {
			return getRuleContext(TypesContext.class,0);
		}
		public TerminalNode ID() { return getToken(MCParser.ID, 0); }
		public TerminalNode LB() { return getToken(MCParser.LB, 0); }
		public TerminalNode RB() { return getToken(MCParser.RB, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public List<ParaContext> para() {
			return getRuleContexts(ParaContext.class);
		}
		public ParaContext para(int i) {
			return getRuleContext(ParaContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MCParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MCParser.COMMA, i);
		}
		public FuncdeclarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcdeclar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).enterFuncdeclar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).exitFuncdeclar(this);
		}
	}

	public final FuncdeclarContext funcdeclar() throws RecognitionException {
		FuncdeclarContext _localctx = new FuncdeclarContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_funcdeclar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			types();
			setState(77);
			match(ID);
			setState(78);
			match(LB);
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PRITYPE) {
				{
				setState(79);
				para();
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(80);
					match(COMMA);
					setState(81);
					para();
					}
					}
					setState(86);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(89);
			match(RB);
			setState(90);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParaContext extends ParserRuleContext {
		public TerminalNode PRITYPE() { return getToken(MCParser.PRITYPE, 0); }
		public TerminalNode ID() { return getToken(MCParser.ID, 0); }
		public TerminalNode LS() { return getToken(MCParser.LS, 0); }
		public TerminalNode INTLIT() { return getToken(MCParser.INTLIT, 0); }
		public TerminalNode RS() { return getToken(MCParser.RS, 0); }
		public ParaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_para; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).enterPara(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).exitPara(this);
		}
	}

	public final ParaContext para() throws RecognitionException {
		ParaContext _localctx = new ParaContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_para);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(PRITYPE);
			setState(93);
			match(ID);
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LS) {
				{
				setState(94);
				match(LS);
				setState(95);
				match(INTLIT);
				setState(96);
				match(RS);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypesContext extends ParserRuleContext {
		public TerminalNode PRITYPE() { return getToken(MCParser.PRITYPE, 0); }
		public TerminalNode VOIDTYPE() { return getToken(MCParser.VOIDTYPE, 0); }
		public Array_typeContext array_type() {
			return getRuleContext(Array_typeContext.class,0);
		}
		public Array_pointer_typeContext array_pointer_type() {
			return getRuleContext(Array_pointer_typeContext.class,0);
		}
		public TypesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_types; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).enterTypes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).exitTypes(this);
		}
	}

	public final TypesContext types() throws RecognitionException {
		TypesContext _localctx = new TypesContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_types);
		try {
			setState(103);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				match(PRITYPE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				match(VOIDTYPE);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(101);
				array_type();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(102);
				array_pointer_type();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Array_typeContext extends ParserRuleContext {
		public TerminalNode PRITYPE() { return getToken(MCParser.PRITYPE, 0); }
		public TerminalNode ID() { return getToken(MCParser.ID, 0); }
		public TerminalNode LS() { return getToken(MCParser.LS, 0); }
		public TerminalNode INTLIT() { return getToken(MCParser.INTLIT, 0); }
		public TerminalNode RS() { return getToken(MCParser.RS, 0); }
		public Array_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).enterArray_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).exitArray_type(this);
		}
	}

	public final Array_typeContext array_type() throws RecognitionException {
		Array_typeContext _localctx = new Array_typeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_array_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(PRITYPE);
			setState(106);
			match(ID);
			setState(107);
			match(LS);
			setState(108);
			match(INTLIT);
			setState(109);
			match(RS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Array_pointer_typeContext extends ParserRuleContext {
		public Input_aptContext input_apt() {
			return getRuleContext(Input_aptContext.class,0);
		}
		public Output_aptContext output_apt() {
			return getRuleContext(Output_aptContext.class,0);
		}
		public Array_pointer_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array_pointer_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).enterArray_pointer_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).exitArray_pointer_type(this);
		}
	}

	public final Array_pointer_typeContext array_pointer_type() throws RecognitionException {
		Array_pointer_typeContext _localctx = new Array_pointer_typeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_array_pointer_type);
		try {
			setState(113);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(111);
				input_apt();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				output_apt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Input_aptContext extends ParserRuleContext {
		public TerminalNode PRITYPE() { return getToken(MCParser.PRITYPE, 0); }
		public TerminalNode ID() { return getToken(MCParser.ID, 0); }
		public TerminalNode LS() { return getToken(MCParser.LS, 0); }
		public TerminalNode RS() { return getToken(MCParser.RS, 0); }
		public Input_aptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input_apt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).enterInput_apt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).exitInput_apt(this);
		}
	}

	public final Input_aptContext input_apt() throws RecognitionException {
		Input_aptContext _localctx = new Input_aptContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_input_apt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(PRITYPE);
			setState(116);
			match(ID);
			setState(117);
			match(LS);
			setState(118);
			match(RS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Output_aptContext extends ParserRuleContext {
		public TerminalNode PRITYPE() { return getToken(MCParser.PRITYPE, 0); }
		public TerminalNode LS() { return getToken(MCParser.LS, 0); }
		public TerminalNode RS() { return getToken(MCParser.RS, 0); }
		public Output_aptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_output_apt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).enterOutput_apt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).exitOutput_apt(this);
		}
	}

	public final Output_aptContext output_apt() throws RecognitionException {
		Output_aptContext _localctx = new Output_aptContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_output_apt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(PRITYPE);
			setState(121);
			match(LS);
			setState(122);
			match(RS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public TerminalNode LB() { return getToken(MCParser.LB, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode RB() { return getToken(MCParser.RB, 0); }
		public TerminalNode LS() { return getToken(MCParser.LS, 0); }
		public List<OperandsContext> operands() {
			return getRuleContexts(OperandsContext.class);
		}
		public OperandsContext operands(int i) {
			return getRuleContext(OperandsContext.class,i);
		}
		public TerminalNode RS() { return getToken(MCParser.RS, 0); }
		public TerminalNode SUB() { return getToken(MCParser.SUB, 0); }
		public TerminalNode LOGICNOT() { return getToken(MCParser.LOGICNOT, 0); }
		public TerminalNode LESS() { return getToken(MCParser.LESS, 0); }
		public TerminalNode LESSEQ() { return getToken(MCParser.LESSEQ, 0); }
		public TerminalNode GREATER() { return getToken(MCParser.GREATER, 0); }
		public TerminalNode GREATEREQ() { return getToken(MCParser.GREATEREQ, 0); }
		public TerminalNode MUL() { return getToken(MCParser.MUL, 0); }
		public TerminalNode DIV() { return getToken(MCParser.DIV, 0); }
		public TerminalNode MOD() { return getToken(MCParser.MOD, 0); }
		public TerminalNode ADD() { return getToken(MCParser.ADD, 0); }
		public TerminalNode LOGICAND() { return getToken(MCParser.LOGICAND, 0); }
		public TerminalNode LOGICOR() { return getToken(MCParser.LOGICOR, 0); }
		public TerminalNode AS() { return getToken(MCParser.AS, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}
